@@ -1,4 +1,6 @@
 Version 1.5.11+svn:
+ * Campaign server:
+   * ignore case on add-on (file)names; fixed bug #13080
  * Language and i18n:
    * updated translations: Chinese (Simplified), Czech, French, Polish,
      Portuguese (Brazil), Spanish, Turkish
